[package]
name = "geekmagic-stats"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
reqwest = { version = "0.12", features = ["blocking", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["clock"] }
claude-code-stats = "0.1.0"
toml = "0.8"

[lib]
name = "geekmagic_common"
path = "src/lib.rs"

[[bin]]
name = "geekmagic-stats"
path = "src/main.rs"

[[bin]]
name = "geekmagic-disk"
path = "src/disk.rs"
